--- a/firmware/config/boards/hellen/alphax-gold/connectors/34pins-4k-B.yaml
+++ b/firmware/config/boards/hellen/alphax-gold/connectors/34pins-4k-B.yaml
@@ -2,223 +2,234 @@ meta: config/boards/hellen_meta.h
 
 pins:
   - pin: 1B
-    function: Injector 8 Output
+    function: Injector 4 Output
     class: outputs
     type: ls
-    id: TLE9104_1_OUT_3
-    ts_name: ___ - Injector 8
-    color: green
+    id: TLE9104_0_OUT_3
+    ts_name: ___ - Injector 4
+    color: orange
 
   - pin: 2B
-    function: Injector 7 Output
+    function: Injector 3 Output
     class: outputs
     type: ls
-    id: TLE9104_1_OUT_2
-    ts_name: ___ - Injector 7
-    color: white
+    id: TLE9104_0_OUT_2
+    ts_name: ___ - Injector 3
+    color: blue
 
   - pin: 3B
-    function: Injector 6 Output
+    function: Injector 2 Output
     class: outputs
     type: ls
-    id: TLE9104_1_OUT_1
-    ts_name: ___ - Injector 6
-    color: yellow
+    id: TLE9104_0_OUT_1
+    ts_name: ___ - Injector 2
+    color: white
 
   - pin: 4B
-    function: Injector 5 Output
+    function: Injector 1 Output
     class: outputs
     type: ls
-    id: TLE9104_1_OUT_0
-    ts_name: ___ - Injector 5
-    color: brown
+    id: TLE9104_0_OUT_0
+    ts_name: ___ - Injector 1
+    color: green
 
   - pin: 5B
-    color: grey
     function: Fuel Pump Relay
+    color: grey
     class: outputs
     type: ls
-    id: TLE9104_3_OUT_3
-    ts_name: ___ Main Relay
+    id: TLE9104_2_OUT_0
+    ts_name: ___ Fuel Pump Relay
+    color: white
 
   - pin: 6B
-    function: Low-Side 3 output
+    color: orange
+    function: Idle Output
     class: outputs
     type: ls
-    id: TLE9104_3_OUT_1
-    ts_name: ___ LS3
+    id: TLE9104_2_OUT_1
+    ts_name: ___ Idle Output
+    color: yellow
 
   - pin: 7B
-    function: Low-Side 4 output
-    class: outputs
-    type: ls
-    id: TLE9104_3_OUT_2
-    ts_name: ___ LS4
+    function: CAN High
+    color: green
+    type: can
 
   - pin: 8B
-    function: Low-Side 5 output
-    class: outputs
-    type: ls
-    id: TLE9104_3_OUT_0
-    ts_name: ___ LS5
+    function: CAN Low
+    color: blue
+    type: can
 
   - pin: 9B
-    meta: H144_IN_VBATT
-    class: analog_inputs
+    function: +12v Bat+
     color: red
-    function: Ignition Switch / Battery Voltage Analog Input
-    ts_name: ___ Voltage From Key
+    type: 12V
 
   - pin: 10B
-    meta: H144_IGN_8
+    meta: H144_IGN_4
     class: outputs
-    ts_name: ___ Coil 8
+    ts_name: ___ Coil 4
+    color: orange
 
   - pin: 11B
-    meta: H144_IGN_7
+    meta: H144_IGN_3
     class: outputs
-    ts_name: ___ Coil 7
+    ts_name: ___ Coil 3
+    color: blue
 
   - pin: 12B
-    meta: H144_IGN_6
+    meta: H144_IGN_2
     class: outputs
-    ts_name: ___ Coil 6
+    ts_name: ___ Coil 2
+    color: white
 
   - pin: 13B
-    meta: H144_IGN_5
+    meta: H144_IGN_1
     class: outputs
-    ts_name: ___ Coil 5
+    ts_name: ___ Coil 1
+    color: green
 
   - pin: 14B
-    meta: H144_IN_D_1
-    class: event_inputs
-    function: Hall Input 1
-    ts_name: ___ Hall Input 1
-    type: hall
+    function: Tachometer Output
+    class: outputs
+    color: yellow
+    type: ls
+    id: TLE9104_2_OUT_3
+    ts_name: ___ - Tachometer Output
+    color:
 
   - pin: 15B
-    meta: H144_IN_D_2
-    class: event_inputs
-    function: Hall Input 2
-    ts_name: ___ Hall Input 2
-    type: hall
+    meta: H144_IN_SENS1
+    class: switch_inputs
+    function: Digital Input 1
+    ts_name: ___ - Digital In 1
+    color: green
 
   - pin: 16B
-    id: [H144_IN_AUX4_DIGITAL, H144_IN_AUX4_DIGITAL, H144_IN_AUX4]
+    id: [H144_IN_MAP1_DIGITAL, H144_IN_MAP1_DIGITAL, H144_IN_MAP1]
     class: [event_inputs, switch_inputs, analog_inputs]
-    ts_name: ___ AUX 2
-    function: AUX input 2
-    type: av
-    function:
+    type: hall
+    ts_name: ___ - Digital/analog input 2
+    function: Digital/event/analog input (cannot be used simultaneously with VR1)
 
   - pin: 17B
-    class: outputs
-    ts_name: ETB+
-    function: ETB+ output
-    color: blue
-    type: etb
+    id: [H144_IN_SENS4, H144_IN_SENS4]
+    class: [event_inputs, switch_inputs]
+    type: hall
+    ts_name: ___ - Digital input 1
+    function: Digital/event input (cannot be used simultaneously with VR1)
+
+  - pin: 17B16B
+    meta: H144_IN_CRANK
+    function: VR1 (cannot be used simultaneously with Hall1 and Hall2)
+    type: vr
+    ts_name: 17A/17B VR Input 1 (Discrete)
 
   - pin: 18B
-    class: outputs
-    ts_name: DC+
-    function: DC+ output
-    color: blue
-    type: etb
+    meta: H144_IN_TPS
+    class: analog_inputs
+    function: TPS1 Sensor Input
+    ts_name: ___ - TPS1
+    type: av
+    color: orange
 
   - pin: 19B
+    meta: H144_IN_CLT
     class: analog_inputs
-    meta: H144_IN_PPS
-    ts_name: ___ PPS1
-    function: PPS input 1
+    function: CLT Sensor Input
+    ts_name: ___ - CLT
     type: av
-    color: white
+    color: grey
+
 
   - pin: 20B
+    meta: H144_IN_IAT
     class: analog_inputs
-    meta: H144_IN_PPS2
-    ts_name: ___ PPS2
-    function: PPS input 2
     type: av
-    color: white
+    function: IAT Sensor Input
+    ts_name: ___ - IAT
+    color: blue
 
   - pin: 21B
-    id: [H144_IN_SENS2, H144_IN_SENS2]
-    class: [event_inputs, switch_inputs]
-    ts_name: ___ Knock 1 / Digital input 7
-    function: Knock sensor 1 / AUX digital (TODO analog) input 7
+    meta: H144_IN_O2S2
+    class: analog_inputs
+    ts_name: ___ MAP
+    function: MAP input
+    type: av
+    color: yellow
 
   - pin: 22B
-    id: [H144_IN_SENS3, H144_IN_SENS3]
-    class: [event_inputs, switch_inputs]
-    ts_name: ___ Knock 2 / Digital input 8
-    function: Knock sensor 2 / AUX digital (TODO analog) input 8
+    meta: H144_IN_TPS2
+    class: analog_inputs
+    ts_name: ___ TPS2
+    function: TPS2 sensor input
+    type: av
+    color: blue
 
   - pin: 23B
-    id: [H144_IN_AUX2_DIGITAL, H144_IN_AUX2_DIGITAL, H144_IN_AUX2]
-    class: [event_inputs, switch_inputs, analog_inputs]
-    type: hall
-    ts_name: ___ - Digital/analog Input 4
-    function: Digital/analog Input 4 (cannot be used simultaneously with VR2)
+    function: Sensor +5v Power Feed
+    type: 5v
+    color: orange
 
   - pin: 24B
-    id: [H144_IN_MAP3_DIGITAL, H144_IN_MAP3_DIGITAL, H144_IN_MAP3]
-    class: [event_inputs, switch_inputs, analog_inputs]
+    id: [H144_IN_D_4, H144_IN_D_4]
+    class: [event_inputs, switch_inputs]
     type: hall
-    ts_name: ___ - Digital/analog Input 3
-    function: Digital/analog Input 3 (cannot be used simultaneously with VR2)
-
-  - pin: 23B24B
-    meta: H144_IN_CAM
-    function: VR2 (cannot be used simultaneously with Hall3 and Hall4)
-    type: vr
-    ts_name: 23B/24B VR Input 2 (Discrete)
+    ts_name: ___ - Digital Input 6
+    function: Digital Input 6 (cannot be used simultaneously with VR3)
 
   - pin: 25B
-    class: outputs
-    ts_name: ___ ETB-
-    function: ETB- output
-    color: white
-    type: etb
+    id: [H144_IN_AUX3_DIGITAL, H144_IN_AUX3_DIGITAL, H144_IN_AUX3]
+    class: [event_inputs, switch_inputs, analog_inputs]
+    type: hall
+    ts_name: ___ - Digital/analog Input 5
+    function: Digital/analog Input 5 (cannot be used simultaneously with VR3)
+
+  - pin: 24B25B
+    meta: H144_IN_VSS
+    function: VR3 (cannot be used simultaneously with Hall5 and Hall6)
+    type: vr
+    ts_name: 24A/25A VR Input 3 (MAX9924)
 
   - pin: 26B
-    class: outputs
-    ts_name: ___ DC-
-    function: DC- output
-    type: etb
-    color: white
-
-  - pin: 27B
-    class: event_inputs
-    meta: H144_IN_D_3
-    ts_name: ___ Flex Fuel
-    function: Flex Fuel Input
-
-  - pin: 28B
     function: GND
     type: GND
 
+  - pin: 27B
+    function: GNDA
+    type: gnd
+    color: black
+
+  - pin: 28B
+    meta: H144_IN_AUX1
+    class: analog_inputs
+    ts_name: ___ AUX1
+    function: AUX input 1
+    type: av
+
   - pin: 29B
-    function: WBO2 Heater Control sensor pin 3
+    function: WBO1 Heater Control sensor pin 3
     color: white
 
   - pin: 30B
-    function: WBO2 VM sensor pin 2
+    function: WBO1 VM sensor pin 2
     color: yellow
 
   - pin: 31B
-    function: WBO2 IP sensor pin 1
+    function: WBO1 IP sensor pin 1
     color: red
 
   - pin: 32B
-    function: WBO2 cal R sensor pin 5
+    function: WBO1 cal R sensor pin 5
     color: green
 
   - pin: 33B
-    function: WBO2 VS sensor pin 6
+    function: WBO1 VS sensor pin 6
     color: black
 
   - pin: 34B
-    function: WBO2 Heater Power pin 4
+    function: WBO1 Heater Power pin 4
     color: grey
 
 info:
