boardSelTachPullUp only:alphax-silver

--- a/firmware/config/boards/hellen/alphax-silver/board_options.ini
+++ b/firmware/config/boards/hellen/alphax-silver/board_options.ini
@@ -1,2 +1,4 @@
 	dialog = fancyHardwareDialog, "Board Control"
 		field = "IAT/CLT Temperature Inputs Pull-Up",			boardUseTempPullUp
+		field = ""
+		field = "A14 Tachometer Output Pull-Up Voltage",				boardSelTachPullUp
