--- a/java_console/io/build.gradle
+++ b/java_console/io/build.gradle
@@ -1,5 +1,3 @@
-
-
 apply from: '../../android/dependencies.gradle'
 apply from: '../../java_tools/dependencies.gradle'
 
@@ -24,6 +22,7 @@ dependencies {
     implementation group: 'tel.schich', name: 'javacan-core', version: "$javaCanVersion", classifier: 'x86_64'
     implementation global_libs.json
     api ts_plugin_libs.httpclient
+    api ts_plugin_libs.httpcore
 
     testFixturesApi global_libs.mockito
     testFixturesApi global_libs.annotations
