Modeled flow IDLE #7544

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -960,6 +960,20 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		xBins = targetAfrBlends2_blendBins, targetAfrBlendParameter2
 		yBins = targetAfrBlends2_blendValues
 
+	curve = idleFlowEstimate, "Idle flow estimate"
+		columnLabel = "Flow", "Idle %"
+		xAxis = 0, 20, 9
+		yAxis = 0, 100, 7
+		xBins = idleFlowEstimateFlow
+		yBins = idleFlowEstimatePosition
+
+	curve = idleAirmassTimingEquivalence, "Idle airmass/timing equivalence"
+		columnLabel = "Airmass delta", "Timing adjustment"
+		xAxis = -30, 30, 7
+		yAxis = -20, 20, 5
+		xBins = airmassToTimingBins
+		yBins = airmassToTimingValues
+
 [TableEditor]
 	;		table_id,	map3d_id,	"title",		page
 @@BOARD_TABLES_FROM_FILE@@
@@ -2327,6 +2341,8 @@ menuDialog = main
 		subMenu = parkingLot2,				"Experimental 2"@@if_ts_show_experimental
 		subMenu = parkingLot3,				"Experimental 3"@@if_ts_show_experimental
 		subMenu = harleyAcr,                @@HD_MENU_NAME@@@@if_ts_show_hd
+		subMenu = idleFlowEstimate, "Idle flow estimate", { modeledFlowIdle }
+		subMenu = idleAirmassTimingEquivalence, "Idle airmass/timing equivalence", { modeledFlowIdle }
 		subMenu = antiLagDialog,                "Anti-Lag ALS"
 		subMenu = rotaryDialog,			"Rotary"@@if_ts_show_rotary
 		subMenu = throttleEffectiveArea, "Throttle effective area", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
@@ -3940,7 +3956,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Dashpot coasting-to-idle Decay time", iacByTpsDecayTime
 
 	dialog = idleSettings, "", yAxis
-		field = "Idle control mode",					idleMode
+		field = "Idle control mode",					idleMode, { !modeledFlowIdle }
 
 		field = "! Solenoid idle control is disabled at zero RPM"
 
@@ -3948,7 +3964,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = idleGating
 ; closed loop mode is an addition on top of open loop, so idleOpenLoop stays open even when closed loop is selected
 		panel = idleOpenLoop
-		panel = idlePidSettings, { idleMode == @@idle_mode_e_IM_AUTO@@ }
+		panel = idlePidSettings, { idleMode == @@idle_mode_e_IM_AUTO@@ || modeledFlowIdle }
 		panel = idleExtra
 
 	dialog = idleTimingPidCorrDialog, "", yAxis
@@ -5364,6 +5380,8 @@ dialog = tcuControls, "Transmission Settings"
 		field = "BRZ/FRS/GT86 pedal",							allowIdenticalPps
 		field = "Artificial Misfire",						artificialTestMisfire
 		field = "Always use instant RPM",				alwaysInstantRpm
+		field = "Modeled flow idle",					modeledFlowIdle
+		field = "Max idle flow",						idleMaximumAirmass
 		field = vinNumber,										vinNumber
 		field = turbochargerFilter,							turbochargerFilter
 		field = auxFrequencyFilter,							auxFrequencyFilter
