only:ts_show_primary_trigger

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2707,7 +2707,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = triggerInputComparator @@if_ts_show_trigger_comparator
 
 	dialog = triggerConfiguration, "", xAxis
-		panel = trigger_primary, {1}, { consumeObdSensors == 0 }
+		panel = trigger_primary, {1}, { consumeObdSensors == 0 }@@if_ts_show_primary_trigger
 		panel = trigger_cams, {1}, { consumeObdSensors == 0 }
 
 ;			Engine->Injection Settings
