--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2647,7 +2647,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "2JZ Precision",                    camDecoder2jzPrecision, 1, {vvtMode1 == @@vvt_mode_e_VVT_TOYOTA_3_TOOTH@@}
 		field = @@CAM_2_MODE_NAME@@,				vvtMode2, {trigger_type != @@trigger_type_e_TT_MAZDA_MIATA_NA@@}@@if_ts_show_cam2
 		field = ""
-		field = "Cam sensor bank 1 intake",			camInputs1, { camInputs1 != 0 || (vvtMode1 != @@vvt_mode_e_VVT_INACTIVE@@ ) }
+		field = @@CAM_INPUT_1_1_NAME@@,			camInputs1, { camInputs1 != 0 || (vvtMode1 != @@vvt_mode_e_VVT_INACTIVE@@ ) }
 		field = "Cam sensor bank 1 exhaust",		camInputs2, { camInputs2 != 0 || (vvtMode2 != @@vvt_mode_e_VVT_INACTIVE@@ && camInputs1 != 0 ) }@@if_ts_show_cam2
 		field = "Cam sensor bank 2 intake",			camInputs3, { camInputs3 != 0 || (vvtMode1 != @@vvt_mode_e_VVT_INACTIVE@@ && camInputs1 != 0 ) }@@if_ts_show_bank2_cam1
 		field = "Cam sensor bank 2 exhaust",		camInputs4, { camInputs4 != 0 || (vvtMode2 != @@vvt_mode_e_VVT_INACTIVE@@ && camInputs2 != 0 ) }@@if_ts_show_bank2_cam2
@@ -2655,7 +2655,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "exhaust Cam Edge Select",					    invertExhaustCamVVTSignal, { camInputs2 != 0 }@@if_ts_show_cam2
 		field = ""
 		field = "#Set offset so VVT indicates 0 degrees in default position"
-		field = "VVT offset bank 1 intake",				vvtOffsets1, { camInputs1 != 0 }
+		field = @@VVT_OFFSET_1_1_NAME@@,				vvtOffsets1, { camInputs1 != 0 }
 		field = "VVT offset bank 1 exhaust",			vvtOffsets2, { camInputs2 != 0 }@@if_ts_show_cam2
 		field = "VVT offset bank 2 intake",				vvtOffsets3, { camInputs3 != 0 }@@if_ts_show_bank2_cam1
 		field = "VVT offset bank 2 exhaust",			vvtOffsets4, { camInputs4 != 0 }@@if_ts_show_bank2_cam2
