revolutionCounterSinceStartGauge only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1519,6 +1519,7 @@ gaugeCategory = Trigger
 	triggerVvt2FallCounterGauge = triggerVvt2Fall,"triggerVvt2Fall", "", 0,10000.0, 0,10000.0, 0,10000.0, 3,3
 	triggerVvt2RiseCounterGauge = triggerVvt2Rise,"triggerVvt2Rise", "", 0,10000.0, 0,10000.0, 0,10000.0, 3,3
 	currentEnginePhaseGauge = currentEngineDecodedPhase, "Engine Phase", "deg", 0, 720, 0, 0, 720, 720, 0, 0
+	revolutionCounterSinceStartGauge = revolutionCounterSinceStart, "Engine Cycle Count", "count",	0,	15000,	0,	0,	10,  300,	0,	0
 
 gaugeCategory = Test Bench
 	testBenchIterGauge = testBenchIter, "Test Bench Iterations", "count", -10, {benchTestCount + 10}, -5, 0, {benchTestCount}, {benchTestCount + 5}, 1, 1
