--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1210,6 +1210,11 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		yBins		= torqueLoadBins, veTableYAxis
 		zBins		= torqueTable
 
+	table = torque2TableTbl, torque2TableMap, "TMF", 1
+		xBins		= tmfRatioBins
+		yBins		= tmfOpeningBins
+		zBins		= tmfTable
+
 	table = veTableTbl,  veTableMap,  @@VE_TABLE_NAME@@,	1
 		xyLabels	= "RPM", {bitStringValue(veAxisLabels, veOverrideMode)}
 		xBins		= veRpmBins,  RPMValue
@@ -2348,6 +2353,8 @@ menuDialog = main
 		subMenu = rotaryDialog,			"Rotary"@@if_ts_show_rotary
 		groupMenu = "Torque"
 		  groupChildMenu = throttleEffectiveArea, "Throttle effective area", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
+		  groupChildMenu = torqueTableTbl, "Torque"
+		  groupChildMenu = torque2TableTbl, "TMF"
 		subMenu = dynoChars,				"Virtual Dyno engine"
 
 		menu = "Help"
@@ -5390,7 +5397,6 @@ dialog = tcuControls, "Transmission Settings"
 		field = useBiQuadOnAuxSpeedSensors,				useBiQuadOnAuxSpeedSensors
 		field = "TODO KS mode 4569",						kickStartCranking
 		panel = allTriggerDebug
-		panel = torqueTableTbl
 
 		help = helpGeneral, "rusEFI General Help"
 		webHelp = @@MAIN_HELP_URL@@
