separate trigger offset from cam being on second phase #7645 only:skeleton

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2704,6 +2704,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 
 	dialog = trigger_advanced,	"Advanced Trigger"
 		field = "Require cam/VVT sync for ignition",	isPhaseSyncRequiredForIgnition
+		field = "Cam sync crank revolution",      camSyncOnSecondCrankRevolution
 		field = "Maximum cam/VVT sync RPM",				maxCamPhaseResolveRpm
 		field = "MAP readout angle",					mapCamDetectionAnglePosition, 1, { vvtMode1 == @@vvt_mode_e_VVT_MAP_V_TWIN@@ }
 		field = "MAP delta threshold",        mapSyncThreshold, 1, { vvtMode1 == @@vvt_mode_e_VVT_MAP_V_TWIN@@ }
