Throttle ratio gauge #7647 only:proteus_f7

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1211,8 +1211,8 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		zBins		= torqueTable
 
 	table = torque2TableTbl, torque2TableMap, "TMF", 1
-		xBins		= tmfRatioBins
-		yBins		= tmfOpeningBins
+		xBins		= tmfRatioBins,  throttlePressureRatio
+		yBins		= tmfOpeningBins, throttleEffectiveAreaOpening
 		zBins		= tmfTable
 
 	table = veTableTbl,  veTableMap,  @@VE_TABLE_NAME@@,	1
