--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1669,6 +1669,7 @@ gaugeCategory = Sensors - Extra 2
 	wastegatePosGauge = wastegatePositionSensor, @@GAUGE_NAME_WG_POSITION@@,  "%",		0,	100,		0,		0,	100,	100,	1,	1
 	auxSpeed1Gauge = auxSpeed1, "Aux Freq Input1", "hz", 0, 30000, 0, 0, 30000, 30000, 0, 0
 	auxSpeed2Gauge = auxSpeed2, "Aux Freq Input2", "hz", 0, 30000, 0, 0, 30000, 30000, 0, 0
+  throttleInletPressureGauge		= throttleInletPressure,					"throttleInletPressure",		"kPa",		0,	300,		10,	10,	200,	200,	0,	0
 
 gaugeCategory = Sensors - EGT
 	egt1Gauge			= egt1, "EGT#1", "C", -100, 1400, 100, 200, 900, 1000, 2, 1
@@ -1735,6 +1736,10 @@ gaugeCategory = Fueling
 	targetLambdaGauge = targetLambda,"fuel: target lambda", "",		10,	19.4,		12,	13,		15,	16,	2,	2
 	currentTargetAfrGauge = targetAFR,"fuel: target AFR", "",		0.65,	1.2,		0.7,	0.75,		1.1,	1.15,	3,	2
 	fuelPressureCorrectionReferenceGauge  = pressureCorrectionReference,	@@GAUGE_NAME_FUEL_CORRECTION_REFERENCE_PRESSURE@@, "kPa", 0, 1000, 0, 0, 1000, 1000, 0, 0
+
+gaugeCategory = Torque
+  throttlePressureRatioGauge		= throttlePressureRatio,					"throttlePressureRatio",		"",		0,	300,		10,	10,	200,	200,	0,	0
+  throttleEffectiveAreaOpeningGauge		= throttleEffectiveAreaOpening,					"throttleEffectiveAreaOpening",		"",		0,	300,		10,	10,	200,	200,	0,	0
 
 gaugeCategory = Throttle Body (incl. ETB)
 	pedalPositionGauge = throttlePedalPosition, @@GAUGE_NAME_THROTTLE_PEDAL@@,		"%",	-20,	120,		-10,	-5,	105,	110,	1,	1
