--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3964,6 +3964,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Use idle VE table",		useSeparateVeForIdle@@if_ts_show_useSeparateVeForIdle
 		field = "Override Idle VE table load axis", idleVeOverrideMode, { useSeparateVeForIdle == 1 }
 		field = "Ramp target on return to idle",	idleReturnTargetRamp, { idleMode == @@idle_mode_e_IM_AUTO@@ }
+		field = "Ramp target duration",	idleReturnTargetRampDuration, { idleMode == @@idle_mode_e_IM_AUTO@@ && idleReturnTargetRamp }
 		field = "Use idle tables for cranking taper",		useSeparateIdleTablesForCrankingTaper
 		field = "Use coasting idle table",	useIacTableForCoasting
 		field = "Dashpot coasting-to-idle Initial idle Adder",	    iacByTpsTaper
