only:auxTempSensor1Gauges

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3077,7 +3077,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = dwellCorrection
 		panel = dwellVoltageCorrection
 
-	dialog = auxTempSensor1Sensor,	"aux1 Thermistor Settings"
+	dialog = auxTempSensor1_thermistor,	"aux1 Thermistor Settings"
 		field = "Input channel",			auxTempSensor1_adcChannel
 		field = "Pullup resistor",				auxTempSensor1_bias_resistor, {auxTempSensor1_adcChannel != @@ADC_CHANNEL_NONE@@}@@if_ts_show_clt_iat_pullup
 
@@ -3092,6 +3092,13 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = ""
 		field = "Highest temperature",					auxTempSensor1_tempC_3, {auxTempSensor1_adcChannel != @@ADC_CHANNEL_NONE@@}
 		field = "Resistance @ HT",						auxTempSensor1_resistance_3, {auxTempSensor1_adcChannel != @@ADC_CHANNEL_NONE@@}
+
+	dialog = auxTempSensor1Gauges
+		gauge = rawAuxTemp1Gauge
+
+	dialog = auxTempSensor1Sensor, "aux1 Thermistor Settings", border
+		panel = auxTempSensor1_thermistor, West
+		panel = auxTempSensor1Gauges, East
 
 	dialog = auxTempSensor2Sensor, "aux2 Thermistor Settings"
 		field = "Input channel",						auxTempSensor2_adcChannel
