--- a/firmware/config/boards/hellen/alphax-8chan/connectors/8chan-A-B.yaml
+++ b/firmware/config/boards/hellen/alphax-8chan/connectors/8chan-A-B.yaml
@@ -222,6 +222,7 @@ pins:
     meta: MM176_IN_TPS_ANALOG
     class: analog_inputs
     function: TPS Sensor Input
+    color: green
     type: av
     ts_name: 31A - TPS Sensor Input
 
@@ -236,6 +237,7 @@ pins:
   - pin: 33A
     meta: MM176_IN_TPS2_ANALOG
     class: analog_inputs
+    color: blue
     type: av
     function: TPS2 Sensor Input
     ts_name: ___ - TPS2 Sensor Input
