idle open loop curve to become a table [update definition & TS] see #7660

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -604,13 +604,6 @@ enable2ndByteCanID = false
 		yBins		= crankingTpsCoef
 		gauge		= TPSGauge
 
-	curve = cltIdleCurve, "Idle position by Engine Temperature"
-		columnLabel = "Coolant", "Position"
-		xAxis		= -40, 120, 10
-		yAxis		=  0,  100, 10
-		xBins		= cltIdleCorrBins, coolant
-		yBins		= cltIdleCorr
-		gauge		= CLTGauge
 
 	curve = iacCoastingCurve, "Coasting IAC Position"
 		columnLabel = "RPM", "Multiplier"
@@ -1506,6 +1499,12 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		yBins		= injectorSecondary_battLagCorrPressBins, pressureCorrectionReference
 		zBins		= injectorSecondary_battLagCorrTable
 
+	table = cltIdleTable, cltIdleTableMap, "Idle position by Engine Temperature"
+		xyLabels    = "Coolant", "RPM"
+		xBins		= cltIdleCorrBins, coolant
+		yBins		= rpmIdleCorrBins, RPMValue
+		zBins		= cltIdleCorrTable
+
 [GaugeConfigurations]
 @@LIVE_DATA_GAUGES_FROM_FILE@@
 @@BOARD_GAUGES_FROM_FILE@@
@@ -2143,7 +2142,7 @@ menuDialog = main
 		subMenu = idlehw,					"Idle hardware"@@if_ts_show_idle_hardware
 		subMenu = std_separator
 		subMenu = cltIdleRPMCurve,			"Target RPM"
-		subMenu = cltIdleCurve,				"Open Loop Idle Curve"
+		subMenu = cltIdleTable,				"Open Loop Idle Table"
 		subMenu = std_separator
 		subMenu = idleTimingPidCorrDialog,	"Closed-loop idle timing"
 		subMenu = iacPidMultTbl,			"IAC PID multiplier", 0, {idleMode == 0 && useIacPidMultTable == 1}
