some explanation for Polynomial mode fix #7668 only:proteus_f7

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2770,15 +2770,16 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Cylinder 12 ",						cylinderBankSelect12, {isInjectionEnabled == 1 && cylindersCount > 11}@@if_ts_show_cylinder_12
 
 	dialog = injectorNonlinearPolynomial, "Polynomial Adder", yAxis
+		field = "Also known as GM mode"
 		field = "Add nonlinearity below pulse",		applyNonlinearBelowPulse
-		field = "constant",							injectorCorrectionPolynomial1
-		field = "x^1",								injectorCorrectionPolynomial2
-		field = "x^2",								injectorCorrectionPolynomial3
-		field = "x^3",								injectorCorrectionPolynomial4
-		field = "x^4",								injectorCorrectionPolynomial5
-		field = "x^5",								injectorCorrectionPolynomial6
-		field = "x^6",								injectorCorrectionPolynomial7
-		field = "x^7",								injectorCorrectionPolynomial8
+		field = "constant offset",				injectorCorrectionPolynomial1
+		field = "multiplier for pulsewidth",								injectorCorrectionPolynomial2
+		field = "multiplier for pulsewidth^2",								injectorCorrectionPolynomial3
+		field = "multiplier for pulsewidth^3",								injectorCorrectionPolynomial4
+		field = "multiplier for pulsewidth^4",								injectorCorrectionPolynomial5
+		field = "multiplier for pulsewidth^5",								injectorCorrectionPolynomial6
+		field = "multiplier for pulsewidth^6",								injectorCorrectionPolynomial7
+		field = "multiplier for pulsewidth^7",								injectorCorrectionPolynomial8
 
 	dialog = injectorNonlinearFord, "Ford-model Small Pulse Correction", yAxis
 		field = "Small pulse slope (ALOSL)",			fordInjectorSmallPulseSlope
