cranking IAC position should be a curve by engine temperature [update definition & TS] see #7669

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -613,10 +613,10 @@ enable2ndByteCanID = false
 		yBins		= iacCoasting
 		gauge		= idleAirValvePositionGauge
 
-	curve = cltCrankingCurve, "Cranking Idle Air multiplier"
-		columnLabel = "Coolant", "Multiplier"
+	curve = cltCrankingCurve, "Cranking Idle Valve Curve"
+		columnLabel = "Coolant", "Percent"
 		xAxis		= -40, 120, 9
-		yAxis		=  0,  3, 10
+		yAxis		=  0,  100, 10
 		xBins		= cltCrankingCorrBins, coolant
 		yBins		= cltCrankingCorr
 		gauge		= CLTGauge
@@ -2133,9 +2133,7 @@ menuDialog = main
 		subMenu = std_separator
 
 		subMenu = crankingAdvanceCurve,		"Cranking ignition advance", {useSeparateAdvanceForCranking == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
-		subMenu = std_separator
 
-		subMenu = cltCrankingCurveDialog,			"Cranking Idle Air Engine Temp multiplier", 1, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 
 	menu = "&Idle"
 		subMenu = idleSettings,				"Idle settings"
@@ -2143,6 +2141,7 @@ menuDialog = main
 		subMenu = std_separator
 		subMenu = cltIdleRPMCurve,			"Target RPM"
 		subMenu = cltIdleTable,				"Open Loop Idle Table"
+		subMenu = cltCrankingCurveDialog,			"Cranking Idle Valve Curve", 1, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		subMenu = std_separator
 		subMenu = idleTimingPidCorrDialog,	"Closed-loop idle timing"
 		subMenu = iacPidMultTbl,			"IAC PID multiplier", 0, {idleMode == 0 && useIacPidMultTable == 1}
@@ -2565,7 +2564,6 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Max air flow", tChargeAirFlowMax
 
   dialog = cltCrankingCurveDialog
-    field = "Cranking base IAC position",			crankingIACposition
     field = "ETB idle maximum angle",				etbIdleThrottleRange
     panel = cltCrankingCurve
 
@@ -4656,7 +4654,6 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Base fuel mass",				cranking_baseFuel, {useRunningMathForCranking == 0}
 
 	dialog = crankingIAC, "Idle air valve"
-		field = "Cranking base IAC position",			crankingIACposition
 		field = "After cranking IAC taper duration",afterCrankingIACtaperDuration
 
 	dialog = crankingIgnition, "Ignition"
