only:simpler menu name

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2140,7 +2140,7 @@ menuDialog = main
 		subMenu = idlehw,					"Idle hardware"@@if_ts_show_idle_hardware
 		subMenu = std_separator
 		subMenu = cltIdleRPMCurve,			"Target RPM"
-		subMenu = cltIdleTable,				"Open Loop Idle Table"
+		subMenu = cltIdleTable,				"Base Idle Valve Position"
 		subMenu = cltCrankingCurveDialog,			"Cranking Idle Valve Curve", 1, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		subMenu = std_separator
 		subMenu = idleTimingPidCorrDialog,	"Closed-loop idle timing"
