cranking iac taper duration should be a curve [definition & TS] see #7670

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -621,6 +621,14 @@ enable2ndByteCanID = false
 		yBins		= cltCrankingCorr
 		gauge		= CLTGauge
 
+	curve = afterCrankingIACtaperCurve, "Idle valve Crank-to-Run Taper"
+		columnLabel = "Coolant", "cyles"
+		xAxis		= -40, 120, 7
+		yAxis		=  0,  500, 11
+		xBins		= afterCrankingIACtaperDurationBins, coolant
+		yBins		= afterCrankingIACtaperDuration
+		gauge		= CLTGauge
+
 	curve = cltIdleRPMCurve, "Idle Target RPM"
 		columnLabel = "Coolant", "RPM"
 		xAxis		= -40, 120, 9
@@ -2142,6 +2150,7 @@ menuDialog = main
 		subMenu = cltIdleRPMCurve,			"Target RPM"
 		subMenu = cltIdleTable,				"Base Idle Valve Position"
 		subMenu = cltCrankingCurveDialog,			"Cranking Idle Valve Curve", 1, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
+		subMenu = afterCrankingIACtaperDurationDialog, "Idle Valve Crank-to-Run Taper"
 		subMenu = std_separator
 		subMenu = idleTimingPidCorrDialog,	"Closed-loop idle timing"
 		subMenu = iacPidMultTbl,			"IAC PID multiplier", 0, {idleMode == 0 && useIacPidMultTable == 1}
@@ -2566,6 +2575,9 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
   dialog = cltCrankingCurveDialog
     field = "ETB idle maximum angle",				etbIdleThrottleRange
     panel = cltCrankingCurve
+
+	dialog = afterCrankingIACtaperDurationDialog
+		panel = afterCrankingIACtaperCurve
 
 	dialog = tChargeSettings, "Estimated cylinder air temperature"
 		panel = tChargeGeneralSettings
@@ -4652,9 +4664,6 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Injection mode",						crankingInjectionMode
 		field = "Fuel Source For Cranking",				useRunningMathForCranking@@if_ts_show_useRunningMathForCranking
 		field = "Base fuel mass",				cranking_baseFuel, {useRunningMathForCranking == 0}
-
-	dialog = crankingIAC, "Idle air valve"
-		field = "After cranking IAC taper duration",afterCrankingIACtaperDuration
 
 	dialog = crankingIgnition, "Ignition"
 		field = "Timing Advance mode",	useSeparateAdvanceForCranking
