--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4584,7 +4584,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 	dialog = limitsSettings, "Limits"
 		field = "Cut fuel on RPM limit",				cutFuelOnHardLimit
 		field = "Cut spark on RPM limit",				cutSparkOnHardLimit
-		field = "Use CLT-based RPM limit curve",		useCltBasedRpmLimit, { cutFuelOnHardLimit || cutSparkOnHardLimit }
+		field = "Use Engine Temperature RPM limit curve",		useCltBasedRpmLimit, { cutFuelOnHardLimit || cutSparkOnHardLimit }
 		field = "RPM hard limit",						rpmHardLimit, { (cutFuelOnHardLimit || cutSparkOnHardLimit) &&  !useCltBasedRpmLimit }
 		field = "RPM limit hysteresis",					rpmHardLimitHyst
 		field = "Boost cut pressure",					boostCutPressure
@@ -4616,7 +4616,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = softRpmLimitSettings, West, { (cutFuelOnHardLimit || cutSparkOnHardLimit) &&  !useCltBasedRpmLimit }
 		panel = etbLimits
 
-    dialog = limitsAndFallbackCenter, "CLT-based RPM Limit"
+    dialog = limitsAndFallbackCenter, "Engine Temperature RPM Limit"
         panel = cltRevLimitCurve
 
 	dialog = limitsAndFallback, "Limits and fallbacks", border
