Grab Idle/Up Grab WOT/Down only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3236,12 +3236,12 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 
 	dialog = pedalSensorLeft, @@pedalSensor_NAME@@
 		field = "Accelerator position sensor",			throttlePedalPositionAdcChannel
-		field = "Up voltage",							throttlePedalUpVoltage
-		commandButton = "Grab Up", cmd_calibrate_pedal_up, { hasIgnitionVoltage }
+		field = "Up (idle) voltage",							throttlePedalUpVoltage
+		commandButton = "Grab Idle/Up", cmd_calibrate_pedal_up, { hasIgnitionVoltage }
 		field = "Down (WOT) voltage",					throttlePedalWOTVoltage
-		commandButton = "Grab Down", cmd_calibrate_pedal_down, { hasIgnitionVoltage }
+		commandButton = "Grab WOT/Down", cmd_calibrate_pedal_down, { hasIgnitionVoltage }
 		field = "Accelerator position 2nd sensor",		throttlePedalPositionSecondAdcChannel
-		field = "Up voltage",							throttlePedalSecondaryUpVoltage
+		field = "Up (idle) voltage",							throttlePedalSecondaryUpVoltage
 		field = "Down (WOT) voltage",					throttlePedalSecondaryWOTVoltage
 		field = "Ford/Toyota redundant PPS mode",			useFordRedundantPps@@if_ts_show_ford_toyota_tps_pps
 		field = "Secondary PPS maximum",				ppsSecondaryMaximum, {useFordRedundantPps}@@if_ts_show_ford_toyota_tps_pps
