ggurov suggests menu imrovements #7676 only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2206,10 +2206,11 @@ menuDialog = main
 		subMenu = vvtTable2Tbl,				"VVT exhaust target", { vvtMode2 != @@vvt_mode_e_VVT_INACTIVE@@ && vvtPins2 != 0 }@@if_ts_show_exhaust_vvt
 
 		subMenu = std_separator
-		subMenu = auxInputsDialog,			"Lua Analog Inputs", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
-		subMenu = luaDigitalInputsDialog,   "Lua Digital Inputs", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
-		subMenu = luaOutputs,				"Lua Script PWM Outputs", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
-		subMenu = luaCommands, "Lua Buttons", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
+		groupMenu = "Lua", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
+		groupChildMenu = auxInputsDialog,			"Lua Analog Inputs", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
+		groupChildMenu = luaDigitalInputsDialog,   "Lua Digital Inputs", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
+		groupChildMenu = luaOutputs,				"Lua Script PWM Outputs", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
+		groupChildMenu = luaCommands, "Lua Buttons", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 
 		groupMenu = "Lua Calibrations", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		groupChildMenu = scriptSetting,		"Lua Script Settings"
