flat shift coolant temperature threshold #7516 skeleton

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -5216,6 +5216,7 @@ dialog = tcuControls, "Transmission Settings"
 
 	dialog = TorqueReductionActivationModeDialog, "Activation", yAxis
 		field = "Activation Mode",	torqueReductionActivationMode
+		field = "Minimal Engine Temperature",	torqueReductionActivationTemperature
 		panel = TorqueReductionButtonDialog,	{torqueReductionActivationMode == @@torqueReductionActivationMode_e_TORQUE_REDUCTION_BUTTON@@}
 		panel = LaunchButtonDialog,				{torqueReductionActivationMode == @@torqueReductionActivationMode_e_LAUNCH_BUTTON@@}
 		panel = ClutchDownDialog,				{torqueReductionActivationMode == @@torqueReductionActivationMode_e_TORQUE_REDUCTION_CLUTCH_DOWN_SWITCH@@}
