--- a/.github/workflows/set-date.yaml
+++ b/.github/workflows/set-date.yaml
@@ -43,7 +43,9 @@ jobs:
         git config --local user.name "GitHub set-date Action"
         git commit -m "Update date" -a 2>&1 | grep -E '(nothing to commit|changed)'
         git stash
-        git pull --rebase
+        echo Fetching only current branch to make things quicker
+        git fetch $(git rev-parse --symbolic-full-name --abbrev-ref @{upstream} | sed 's!/! !')
+        git rebase
 
     - name: Push changed date file
       if: ${{ env.skip != 'true' }}
