--- a/.github/workflows/build-firmware-windows.yaml
+++ b/.github/workflows/build-firmware-windows.yaml
@@ -40,7 +40,7 @@ jobs:
           git submodule update --init --depth=1 java_console/peak-can-basic
 
       - name: Set up Cygwin
-        uses: cygwin/cygwin-install-action@master
+        uses: cygwin/cygwin-install-action@v5
 
       - name: Print bash version
         run: bash --version
