DC motor wastegate feed forward 2D table see #7150

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -596,6 +596,13 @@ enable2ndByteCanID = false
 		yBins		= etbBiasValues
 		gauge		= TPSGauge
 
+	curve = dcWastegateBiasCurve, "DC Wastegate Bias Curve"
+		columnLabel = "DC Position", "duty bias"
+		xAxis		=  0, 50, 11
+		yAxis		=  -40, 40, 9
+		xBins		= dcWastegateBiasBins
+		yBins		= dcWastegateBiasValues
+
 	curve = crankingTpsCurve, "Cranking TPS Multiplier"
 		columnLabel = "TPS", "Multiplier"
 		xAxis		=  0, 100, 11
@@ -2197,6 +2204,7 @@ menuDialog = main
 		subMenu = std_separator				@@if_ts_show_etb
 		subMenu = etbDialog,				"Electronic throttle body", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb
 		subMenu = etbTpsBiasCurve,			"ETB bias curve (feed forward)", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ } @@if_ts_show_etb_bias_curve
+		subMenu = dcWastegateBiasCurve,		"DC wastegate bias curve (feed forward)", { 1 }, { etbFunctions1 == @@dc_function_e_DC_Wastegate@@ || etbFunctions2 == @@dc_function_e_DC_Wastegate@@ } @@if_ts_show_etb_bias_curve
 		subMenu = pedalToTpsTbl,			@@pedalToTpsTbl_NAME@@ @@if_ts_show_etb
 		subMenu = throttle2TrimTbl,			"ETB #2 Trim", { tps2_1AdcChannel != @@ADC_CHANNEL_NONE@@ } @@if_ts_show_tps2
 
